style/modules/header/_header-bottom-left.scss
// main: ../../main.scss

@import "../../_utils/vars";
@import "../../_utils/mixins";

// header image, pagename, tabmenu
#header-bottom-left {
  position: absolute;
  top: em(86, 14);
  height: em(53, 14);
  font-size: em(14, 10);

  // nested to avoid body:link styling
  .pagename {
    a { color: $light-secondary-text; }

    &:hover a { color: $light-text; }
  }
}

// snooface
#header-img,
#header-img.default-header {
  height: em(53, 14);
  width: 0;

  @include margin(0 0 0 em(40, 16));
  padding-right: em(35, 14); // makes space for snoo visibility

  background: url(%%snoo-color%%) no-repeat;
  @include transition-default;
}

// positioning fix for pagename and tabmenu when reddit pushes custom banner image
#header-img-a {
  @each $class in (pagename, tabmenu) {
    .#{$class} {
      position: relative;
      top: em(-4, 16);
      display: inline-block;
    }
  }
}

// subreddit name
.pagename {
  margin: 0;
  font-size: em(16, 14);

  a {
    position: relative;

    display: inline-block;
    height: em(53, 16);
    padding: 0 em(16, 16);

    font-variant: normal;
    line-height: em(53, 16);
    text-transform: lowercase;

    @include transition-default;

    &:hover {
      color: $light-text;
      text-decoration: none;
    }
  }
}

// tabmenu
.tabmenu {
  position: absolute;
  left: 0;
  top: em(73, 14);

  height: em(64, 14);
  width: 100vw; // fuck IE8 support
  margin-top: 0;
  padding-left: em(16, 16);

  font-size: inherit;
  line-height: em(64, 14);

  li {
    margin: 0;

    // hides "rising", "controversial", "ads", and "gilded" tabs
    @each $hidden-tab in rising, controversial, ads, gilded {
      a[href$="/#{$hidden-tab}/"] { display: none; }
    }

    // styles visible tabs
    a[href$="/flattishexperimental/"],
    a[href$="/new/"],
    a[href$="/top/"],
    a[href$="/wiki/"],
    #viewImagesButton {
      display: inline-block;

      height: em(64, 14);
      width: initial;
      padding: 0 em(24, 14);

      color: $light-secondary-text;
      font-weight: bold;
      text-transform: uppercase;

      background: transparent radial-gradient(circle, rgba($accent, .25) 15%, transparent 30%) no-repeat 50% 50% / 0; // color image repeat position size
      border-bottom: em(2, 14) solid transparent;
      @include transition(background 0.3s cubic-bezier(0, 0, .2, 1), color .5s ease-out);

      &:focus {
        outline: 0;
        background-size: 1000%;
      }

      &:hover {
        margin: 0;
        padding: 0 em(24, 14);
        color: $light-text;
      }

      &:after {
        position: relative;
        top: em(-64, 14);
        left: em(-24, 14);

        display: block;
        width: 0;
        height: inherit;

        content: "";

        border-bottom: em(2, 14) solid transparent;
        @include transition(border-bottom 0.2s cubic-bezier(0.4, 0.0, 0.4, 1), width 0.2s cubic-bezier(0.4, 0.0, 0.4, 1));
      }

      &:hover::after {
        width: calc(100% - -48px); // double negative works but not +...wtf css?
        border-bottom: em(2, 14) solid $accent;
      }
    }

    // ensures selected tab remains unchanged
    &.selected a {
      margin: 0;
      padding: 0 em(24, 14);
      border-bottom-color: $accent;
      @include border-width(0 0 em(2, 14) 0);
    }
  }
}

@media (min-width: $screen-sm-min) {
  #header-bottom-left {
    top: em(159, 14);
    height: em(64, 14);
  }

  #header-img,
  #header-img.default-header {
    height: em(64, 14);

    @include margin(0 0 0 em(16, 16));

    background-position: 0% em(5, 14);
  }

  #header-img-a ~ .pagename {
    top: em(-3, 16);
  }

  .pagename a {
    height: em(64, 16);
    line-height: em(64, 16);
  }

  .tabmenu {
    position: static;
    left: initial;
    top: initial;

    width: initial;
    padding-left: initial;
  }
}

